// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > Button Matches snapshot when boolean prop "disabled" is set to: "false" 1`] = `
<ForwardRef
  aria-label="jest-auto-snapshots String Fixture"
  disabled={false}
  isSplit={true}
  onClick={[MockFunction]}
  size="small"
  type="link"
>
  jest-auto-snapshots String Fixture
  <ForwardRef
    alt="loading"
    src="/../images/loading-gray.svg"
  />
</ForwardRef>
`;

exports[`jest-auto-snapshots > Button Matches snapshot when boolean prop "isSplit" is set to: "false" 1`] = `
<ForwardRef
  aria-label="jest-auto-snapshots String Fixture"
  disabled={true}
  isSplit={false}
  onClick={false}
  size="small"
  type="link"
>
  jest-auto-snapshots String Fixture
  <ForwardRef
    alt="loading"
    src="/../images/loading-gray.svg"
  />
</ForwardRef>
`;

exports[`jest-auto-snapshots > Button Matches snapshot when boolean prop "loading" is set to: "false" 1`] = `
<ForwardRef
  aria-label="jest-auto-snapshots String Fixture"
  disabled={true}
  isSplit={true}
  onClick={false}
  size="small"
  type="link"
>
  jest-auto-snapshots String Fixture
</ForwardRef>
`;

exports[`jest-auto-snapshots > Button Matches snapshot when passed all props 1`] = `
<ForwardRef
  aria-label="jest-auto-snapshots String Fixture"
  disabled={true}
  isSplit={true}
  onClick={false}
  size="small"
  type="link"
>
  jest-auto-snapshots String Fixture
  <ForwardRef
    alt="loading"
    src="/../images/loading-gray.svg"
  />
</ForwardRef>
`;

exports[`jest-auto-snapshots > Button Matches snapshot when passed only required props 1`] = `
<ForwardRef
  aria-label="jest-auto-snapshots String Fixture"
  disabled={false}
  isSplit={false}
  onClick={[MockFunction]}
  size="medium"
  type="secondary"
>
  jest-auto-snapshots String Fixture
</ForwardRef>
`;
